--- a/bower.json
+++ b/bower.json
@@ -21,8 +21,8 @@
     "bootstrap": "3",
     "jquery": "^3.3.1",
     "font-awesome": "4",
-    "scaleapp": "^0.4.3"
+    "scaleapp": "^0.4.3",
+    "slick-carousel": "^1.8.1"
   },
-  "overrides": {
-  }
+  "overrides": {}
 }
